--- a/Wordpress Templates/2_minimal/style.css
+++ b/Wordpress Templates/2_minimal/style.css
@@ -1,8 +1,7 @@
 @charset "utf-8";
 /*
-	Theme Name: RafalKruszka
-	Author: Paweł Szeląg, SCPROJECTS
-	Author URI: http://scprojects.pl
+	Theme Name: 2_minimal
+	Author: Michał Broler
 	Description: Minimalistyczny template na potrzeby strony Rafała Kruszki
 	License: GNU General Public License v2 or later
 	License URI: http://www.gnu.org/licenses/gpl-2.0.html
